--- a/quad/CMakeLists.txt
+++ b/quad/CMakeLists.txt
@@ -42,5 +42,7 @@ add_library(variables ${VARIABLES_DIR}/variables.hpp)
 set_target_properties(variables PROPERTIES LINKER_LANGUAGE CXX)
 
 add_executable(${PROJECT_NAME}_node src/quad_node.cpp ${WEIGHT_SRC_DIR}/weight.cpp ${LAWN_SRC_DIR}/lawnmower.cpp)
+add_executable(${PROJECT_NAME}_observer_node src/observer_node.cpp)
 
 target_link_libraries(${PROJECT_NAME}_node ${catkin_LIBRARIES})
+target_link_libraries(${PROJECT_NAME}_observer_node ${catkin_LIBRARIES})
