--- a/quad/CMakeLists.txt
+++ b/quad/CMakeLists.txt
@@ -20,8 +20,8 @@ catkin_package(
 
 SET(WEIGHT_INCLUDE_DIR include/quad/weight/include/)
 SET(WEIGHT_SRC_DIR include/quad/weight/src/)
-SET(LAWN_INCLUDE_DIR include/quad/lawnmower/include/)
-SET(LAWN_SRC_DIR include/quad/lawnmower/src/)
+SET(LAWNMOWER_INCLUDE_DIR include/quad/lawnmower/include/)
+SET(LAWNMOWER_SRC_DIR include/quad/lawnmower/src/)
 SET(SURVIVOR_INCLUDE_DIR include/quad/survivor/include/)
 SET(SURVIVOR_SRC_DIR include/quad/survivor/src/)
 
@@ -30,7 +30,7 @@ SET(VARIABLES_DIR include/quad/variables/)
 include_directories(include
                     ${VARIABLES_DIR}
                     ${WEIGHT_INCLUDE_DIR}
-                    ${LAWN_INCLUDE_DIR}
+                    ${LAWNMOWER_INCLUDE_DIR}
                     ${SURVIVOR_INCLUDE_DIR}
                     ${catkin_INCLUDE_DIRS}
                     )
@@ -38,8 +38,8 @@ include_directories(include
 add_library(weight ${WEIGHT_INCLUDE_DIR}/weight.hpp)
 set_target_properties(weight PROPERTIES LINKER_LANGUAGE CXX)
 
-add_library(lawn ${LAWN_INCLUDE_DIR}/lawnmower.hpp)
-set_target_properties(lawn PROPERTIES LINKER_LANGUAGE CXX)
+add_library(lawnmower ${LAWNMOWER_INCLUDE_DIR}/lawnmower.hpp)
+set_target_properties(lawnmower PROPERTIES LINKER_LANGUAGE CXX)
 
 add_library(survivor ${SURVIVOR_INCLUDE_DIR}/survivor.hpp)
 set_target_properties(survivor PROPERTIES LINKER_LANGUAGE CXX)
@@ -47,7 +47,7 @@ set_target_properties(survivor PROPERTIES LINKER_LANGUAGE CXX)
 add_library(variables ${VARIABLES_DIR}/variables.hpp)
 set_target_properties(variables PROPERTIES LINKER_LANGUAGE CXX)
 
-add_executable(${PROJECT_NAME}_node src/quad_node.cpp ${WEIGHT_SRC_DIR}/weight.cpp ${LAWN_SRC_DIR}/lawnmower.cpp ${SURVIVOR_SRC_DIR}/survivor.cpp)
+add_executable(${PROJECT_NAME}_node src/quad_node.cpp ${WEIGHT_SRC_DIR}/weight.cpp ${LAWNMOWER_SRC_DIR}/lawnmower.cpp ${SURVIVOR_SRC_DIR}/survivor.cpp)
 add_executable(${PROJECT_NAME}_observer_node src/observer_node.cpp)
 
 target_link_libraries(${PROJECT_NAME}_node ${catkin_LIBRARIES})
