--- a/.gitignore
+++ b/.gitignore
@@ -3,4 +3,7 @@ quad/Quad.code-workspace
 .rosinstall.bak
 quad/.vscode/c_cpp_properties.json
 Quad.code-workspace
+quad/include/quad/plotter/data/
+quad/build/
+quad/devel/
 *.vscode
